# xinfer

./: .gitignore  BIDIRECTIONAL_BETWEEN_XTORCH_XINFER.md  CMakeLists-old.txt  CMakeLists.txt  CONNECTION_TO_XTORCH.md  FUTURE.md  LAST_STRUCTURE_TO_OTHER_PROJECTS.md  README.MD  WORK_FLOW.md  f.txt  main.cpp  xinfer.h
examples/: 1_image_classification.cpp  2_object_detection.cpp  3_diffusion_generation.cpp  4_nlp_sentiment.cpp  5_manual_engine_build.cpp  CMakeLists.txt  hub_test_01.cpp
examples/00_essentials/: 02_load_engine.cpp
examples/01_computer_vision/: action_recognition.cpp  anomaly_detection.cpp  face_recognition.cpp  image_classification.cpp  lpr_ocr.cpp  object_detection.cpp  segmentation.cpp  wildlife_tracker_demo.cpp
examples/02_audio_processing/: audio_classifier.cpp  speech_to_text.cpp
examples/03_nlp_text/: bert_embedding.cpp  llama_chatbot.cpp  stable_diffusion_gen.cpp
examples/04_tabular_siem/: graph_anomaly.cpp  log_parser_demo.cpp  network_intrusion.cpp
examples/05_platform_specific/: fpga_streaming.cpp  jetson_unified_mem.cpp  microchip_kws.cpp  rockchip_zero_copy.cpp
examples/06_projects/aegis_sky/: main.cpp
examples/07_flow/: run_pipeline.cpp
examples/08_serving/: README.md  client.py  run_server.cpp
examples/09_telemetry/: detect_data_drift.cpp  remote_logging.cpp  system_health.cpp
src/backends/: CMakeLists.txt
src/backends/ambarella_cv/: CMakeLists.txt  README.md  backend.cpp
src/backends/amd_ryzen_ai/: CMakeLists.txt  README.md  backend.cpp
src/backends/amd_vitis/: CMakeLists.txt  README.md  backend.cpp
src/backends/apple_coreml/: CMakeLists.txt  README.md  backend.mm
src/backends/google_tpu/: CMakeLists.txt  README.md  backend.cpp
src/backends/hailo_rt/: CMakeLists.txt  README.md  backend.cpp
src/backends/intel_fpga/: CMakeLists.txt  README.md  backend.cpp
src/backends/intel_ov/: CMakeLists.txt  README.md  backend.cpp
src/backends/lattice_sensai/: CMakeLists.txt  README.md  backend.cpp
src/backends/mediatek_np/: CMakeLists.txt  README.md  backend.cpp
src/backends/microchip_vb/: CMakeLists.txt  README.md  backend.cpp
src/backends/nvidia_trt/: CMakeLists.txt  README.md  backend.cpp
src/backends/qualcomm_qnn/: CMakeLists.txt  README.md  backend.cpp
src/backends/rockchip_rknn/: CMakeLists.txt  README.md  backend.cpp
src/backends/samsung_exynos/: CMakeLists.txt  README.md  backend.cpp
src/compiler/: CMakeLists.txt  base_compiler.cpp  compiler_factory.cpp
src/compiler/drivers/: DESCRIPTION.md  cavalry_driver.cpp  coreml_driver.cpp  edgetpu_driver.cpp  exynos_driver.cpp  hailo_driver.cpp  intel_fpga_driver.cpp  neuropilot_driver.cpp  ov_driver.cpp  qnn_driver.cpp  rknn_driver.cpp  ryzen_ai_driver.cpp  sensai_driver.cpp  trt_driver.cpp  vbx_driver.cpp  vitis_driver.cpp
src/core/: CMakeLists.txt  engine.cpp  tensor.cpp
src/flow/: CMakeLists.txt  pipeline.cpp
src/flow/nodes/: basic_nodes.cpp  infer_nodes.cpp  sink_nodes.cpp  source_nodes.cpp
src/postproc/: CMakeLists.txt  anomaly.cu  detection.cu  detection3d.cu  diffusion_sampler.cu  factory.cpp  ocr_decoder.cu  segmentation.cu  yolo_decoder.cu
src/postproc/temp/: anomaly.cu  ctc_decoder.cu  instance_segmentation.cu
src/preproc/: CMakeLists.txt  audio_processor.cu  factory.cpp  image_processor.cu
src/preproc/graph/: graph_builder.cpp
src/serving/: CMakeLists.txt  model_repository.cpp  server.cpp
src/serving/http/: router.cpp
src/telemetry/: CMakeLists.txt  drift_detector.cpp  monitor.cpp
src/telemetry/exporters/: file_exporter.cpp  metric_exporter.cpp
src/utils/: CMakeLists.txt  downloader.cpp  image_utils.cpp
src/zoo/: CMakeLists.txt  f.txt
src/zoo/accessibility/: sign_translator.cpp  speech_augmenter.cpp  visual_assistant.cpp
src/zoo/aec/: blueprint_auditor.cpp  site_safety_monitor.cpp
src/zoo/audio/: classifier.cpp  event_detector.cpp  language_identifier.cpp  music_source_separator.cpp  speaker_identifier.cpp  speech_recognizer.cpp
src/zoo/chemistry/: molecule_analyzer.cpp  reaction_forecaster.cpp
src/zoo/civil/: grid_inspector.cpp  pavement_analyzer.cpp  structural_inspector.cpp
src/zoo/cybersecurity/: malware_classifier.cpp  network_detector.cpp
src/zoo/document/: handwriting_recognizer.cpp  layout_parser.cpp  signature_detector.cpp  table_extractor.cpp
src/zoo/drones/: navigation_policy.cpp
src/zoo/dsp/: signal_filter.cpp  signal_filter.cu  spectrogram.cpp
src/zoo/education/: grader.cpp  presentation_coach.cpp  tutor.cpp
src/zoo/energy/: seismic_interpreter.cpp  turbine_inspector.cpp  well_log_analyzer.cpp
src/zoo/fashion/: fabric_inspector.cpp  pattern_generator.cpp  trend_forecaster.cpp  virtual_tryon.cpp
src/zoo/gaming/: npc_behavior_policy.cpp
src/zoo/generative/: colorizer.cpp  dcgan.cpp  diffusion_pipeline.cpp  image_to_video.cpp  inpainter.cpp  outpainter.cpp  style_transfer.cpp  super_resolution.cpp  text_to_3d.cpp  text_to_speech.cpp  video_frame_interpolation.cpp  voice_converter.cpp
src/zoo/geospatial/: building_segmenter.cpp  crop_monitor.cpp  disaster_assessor.cpp  maritime_detector.cpp  road_extractor.cpp
src/zoo/hci/: emotion_recognizer.cpp  gaze_tracker.cpp  lip_reader.cpp
src/zoo/hft/: order_execution_policy.cpp
src/zoo/insurance/: claim_assessor.cpp  document_analyzer.cpp  property_assessor.cpp
src/zoo/legal/: contract_analyzer.cpp  ediscovery_classifier.cpp
src/zoo/live_events/: broadcast_director.cpp  crowd_analyzer.cpp  replay_generator.cpp  sports_analyzer.cpp
src/zoo/logistics/: damage_assessor.cpp  fill_estimator.cpp  inventory_scanner.cpp
src/zoo/maritime/: collision_avoidance.cpp  docking_system.cpp  port_analyzer.cpp
src/zoo/media_forensics/: audio_authenticator.cpp  deepfake_detector.cpp  provenance_tracker.cpp
tests/: CMakeLists.txt
tests/builders/: test_engine_builder.cpp
tests/core/: test_engine.cpp  test_tensor.cpp
tests/postproc/: test_detection.cpp
tests/preproc/: test_image_processor.cpp
tools/xinfer-cli/: CMakeLists.txt  main-with-deployer-incomplete.cpp  main.cpp
ui/xinfer_studio/: CMakeLists.txt  main.cpp  mainwindow.h  resources.qrc
(+715 files in other folders)
